--- a/src/Components/CSS/styles.css
+++ b/src/Components/CSS/styles.css
@@ -40,7 +40,7 @@
 }
 .service {
   margin-top: 100px;
-  padding-left: 90px;
+  margin-left: 150px;
   padding-top: 30px;
 }
 .book-btn {
@@ -172,13 +172,13 @@ body h4 {
   border-radius: 14px;
   z-index: 1;
 }
+
 .subtract {
+  margin-top: -130px;
   height: 130px;
-  margin-right: -190px;
-  float: right;
 }
 .booking {
-  margin-left: 300px;
+  margin-left: 500px;
 }
 .subtract2 {
   height: 100px;
