--- a/src/Components/CSS/styles.css
+++ b/src/Components/CSS/styles.css
@@ -678,8 +678,9 @@ body h4 {
     display: none;
   }
   .my-form {
-    width: 370px;
-    margin-left: 0px;
+    width: 360px;
+    margin-left: auto;
+    margin-right: auto;
     padding: 15px !important;
     margin-bottom: 20px !important;
   }
