--- a/src/Components/CSS/styles.css
+++ b/src/Components/CSS/styles.css
@@ -184,6 +184,7 @@ body h4 {
   z-index: -1;
 }
 .num-fig {
+  margin-top: 20px;
   z-index: 1;
   height: 70px;
   margin-right: 20px;
@@ -247,7 +248,7 @@ body h4 {
 }
 .tutor {
   width: 500px;
-  margin-left: 100px !important;
+  margin-left: 150px !important;
 }
 
 .become-btn:hover {
@@ -303,7 +304,11 @@ body h4 {
 }
 .line {
   position: absolute;
+  margin-top: 20px;
   margin-left: 33px;
+}
+.r-name {
+  text-align: left;
 }
 .social {
   height: 45px;
@@ -327,7 +332,7 @@ body h4 {
   line-height: 30px;
 }
 .subscribe {
-  width: 479px;
+  width: 487px;
   background-color: inherit;
   color: white;
 }
@@ -462,6 +467,9 @@ body h4 {
 }
 .formt-sm {
   display: none;
+}
+.footer-sect1 {
+  margin-left: 80px;
 }
 @media (max-width: 576px) {
   .nav-brand {
