--- a/src/Components/CSS/styles.css
+++ b/src/Components/CSS/styles.css
@@ -121,10 +121,10 @@
   border-radius: 14px;
 }
 .stud-img {
-  width: 680px;
+  width: 600px;
   border-radius: 12px;
   margin-right: 20px;
-  height: 600px;
+  height: 550px;
 }
 .hero {
   padding-top: 50px;
@@ -282,17 +282,10 @@ body h4 {
   border-radius: 14px;
 }
 .top-image {
-  width: 570px;
+  width: 550px;
   height: 650px;
   border-radius: 12px;
   z-index: 2;
-}
-
-.tutor-images {
-  direction: rtl;
-  float: right;
-  display: block;
-  margin-top: -450px;
 }
 .foot-links a {
   text-decoration: none;
@@ -326,6 +319,9 @@ body h4 {
 }
 .r-name {
   margin-top: 15px;
+  line-height: 25px;
+  font-weight: 700;
+  font-size: 22px;
   color: #1f3158;
   text-align: left;
 }
@@ -497,7 +493,9 @@ body h4 {
 }
 .star {
   height: 25px;
-  margin-top: -20px;
+  float: left;
+  margin-top: -10px;
+  margin-left: -2px;
 }
 .footer h4 {
   font-family: Helvetica !important;
@@ -600,6 +598,7 @@ body h4 {
   }
   .star {
     margin-top: -10px;
+    margin-left: 0px;
   }
   .studh {
     display: block;
