--- a/src/Components/CSS/styles.css
+++ b/src/Components/CSS/styles.css
@@ -499,6 +499,8 @@ body h4 {
 }
 .card-cont {
   margin-bottom: 150px;
+  display: flex;
+  justify-content: center;
 }
 .what-say-sm {
   display: none !important;
@@ -557,13 +559,47 @@ body h4 {
 }
 @media (max-width: 1200px) {
   .about-service {
-    font-size: 28px;
-    line-height: 36px;
+    font-size: 22px;
+    line-height: 30px;
+    width: 500px;
+  }
+  .top-image {
+    width: 480px;
+    height: 340px;
+    border-radius: 12px;
+    z-index: 2;
+  }
+  .tutor {
+    margin-left: 80px !important;
+  }
+  .service {
+    margin-left: 80px;
   }
   .d-step {
-    font-size: 25px;
-    line-height: 30px;
+    font-size: 18px;
+    line-height: 20px;
   }
+  .stud-img {
+    margin-top: 50px;
+    margin-right: 40px;
+    background: #fed7bd;
+    width: 450px;
+    border-radius: 12px;
+    height: 550px;
+  }
+  .student {
+    background-color: #b84b40;
+    height: 560px;
+    width: 400px;
+    z-index: 1;
+    direction: rtl;
+    margin-top: 45px;
+    border-radius: 14px;
+    margin-bottom: 40px;
+  }
+}
+.nav-brand {
+  padding-right: 150px;
 }
 @media (max-width: 576px) {
   .nav-brand {
@@ -668,6 +704,7 @@ body h4 {
   }
   .about-service {
     font-weight: 400;
+    width: fit-content;
     font-size: 12px;
     line-height: 16px;
   }
@@ -756,6 +793,9 @@ body h4 {
     margin-right: auto;
   }
   .subtract2 {
+    display: none;
+  }
+  .stud-img2 {
     display: none;
   }
   .nav {
