--- a/Learnhall/CSS/MediaQuerries.css
+++ b/Learnhall/CSS/MediaQuerries.css
@@ -1,3 +1,10 @@
+*{
+    font-family: Helvetica Neue, Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+
 /* large desktop layout*/
 @media only screen and (min-width: 1440px){
     .container{
@@ -5,40 +12,28 @@
         min-width: 1350px;
         margin: auto;
     }
-    *{
-        font-family: Arial, Helvetica, sans-serif;
-        margin: 0;
-        padding: 0;
-    }
 }
-
-
-
 /*Desktop layout*/
 @media only screen and (min-width: 960px) and (max-width: 1440px){
     .container{
         width: 80%;
         min-width: 940px;
+        margin: auto;
     }
 }
-
-
-
 /*Tablet*/
 @media only screen and (min-width: 576px) and (max-width: 960px){
     .container{
         width: 80%;
         min-width: 550px;
+        margin: auto;
     }
 }
-
-
-
-
 /*Mobile*/
 @media only screen and (max-width: 576px){
     .container{
         width: 80%;
         min-width: 270px;
+        margin: auto;
     }
 }
