--- a/Learnhall/CSS/Header.css
+++ b/Learnhall/CSS/Header.css
@@ -87,6 +87,15 @@ header{
     .hamburger-menu-open{
         display: none;
     }
+    .nav-bar-hamburger-menu img{
+        display: none;
+    }
+    .hamburger-menu-close{
+        display: none;
+    }
+    .nav-bar-hamburger-menu{
+        display: none;
+    }
 }
 
 /**********************
@@ -135,6 +144,15 @@ header{
     .hamburger-menu-open{
         display: none;
     }
+    .nav-bar-hamburger-menu img{
+        display: none;
+    }
+    .hamburger-menu-close{
+        display: none;
+    }
+    .nav-bar-hamburger-menu{
+        display: none;
+    }
 }
 
 /**********************
@@ -166,23 +184,55 @@ header{
     .logo-text a{
         font-size: 29px;
     }
-    .nav-bar{
-        display: none;
-    }
     .hamburger-menu-open{
+        margin-top: -37px;
         display: flex;
         justify-content: right;
-        margin-top: -37px;
     }
     .hamburger-menu-open img{
         height: 40px;
         width: 40px;
     }
+    .hamburger-menu-close{
+        margin-top: -37px;
+        display: flex;
+        justify-content: right;
+        display: none;
+    }
+    .hamburger-menu-close img{
+        height: 30px;
+        width: 30px;
+    }
     .nav-bar-hamburger-menu{
-        background-color: aqua;
-        height: 100%;
-        max-height: 1000px;
-        min-height:100px;
+        padding-bottom: 30px;
+    }
+    .nav-bar-hamburger-menu .hamburger-menu{
+        width: 500px;
+        margin: auto;
+        background-color: antiquewhite;
+    }
+    .nav-bar-hamburger-menu .hamburger-menu li{
+        width: 160px;
+        padding-top: 30px;
+        text-align: center;
+        list-style: none;
+        margin: auto;
+    }
+    .nav-bar-hamburger-menu .hamburger-menu li a{
+        font-size: 20px;
+        text-decoration: none;
+        color:#070a1396;
+    } 
+    .nav-bar-hamburger-menu .hamburger-menu li img{
+        height: 20px;
+        width: 20px;
+        margin-top: 2px;
+    }   
+    .nav-bar-hamburger-menu .hamburger-menu li span{
+        font-size: 20px;
+    }
+    .nav-bar{
+        display: none;
     }
 }
 
@@ -216,16 +266,52 @@ header{
     .logo-text a{
         font-size: 28px;
     }
-    .nav-bar{
-        display: none;
-    }
     .hamburger-menu-open{
+        margin-top: -28px;
         display: flex;
         justify-content: right;
-        margin-top: -28px;
     }
     .hamburger-menu-open img{
         height: 32px;
         width: 32px;
+    }
+    .hamburger-menu-close{
+        margin-top: -28px;
+        display: flex;
+        justify-content: right;
+        display: none;
+    }
+    .hamburger-menu-close img{
+        height: 25px;
+        width: 25px;
+    }
+    .nav-bar-hamburger-menu .hamburger-menu{
+        width: 300px;
+        margin: auto;
+        background-color: antiquewhite;
+    }
+    .nav-bar-hamburger-menu .hamburger-menu li{
+        width: 160px;
+        padding-top: 25px;
+        text-align: center;
+        list-style: none;
+        margin: auto;
+    }
+    .nav-bar-hamburger-menu .hamburger-menu li a{
+        font-size: 17px;
+        text-decoration: none;
+        color:#070a1396;
+    }    
+    .nav-bar-hamburger-menu .hamburger-menu li img{
+        height: 17px;
+        width: 17px;
+        margin-top: 2px;
+        margin-right: -15px;
+    }  
+    .nav-bar-hamburger-menu .hamburger-menu li span{
+        font-size: 17px;
+    }
+    .nav-bar{
+        display: none;
     }
 }
