--- a/Learnhall/CSS/Header.css
+++ b/Learnhall/CSS/Header.css
@@ -205,11 +205,11 @@ header{
     }
     .nav-bar-hamburger-menu{
         padding-bottom: 30px;
+        display: none;
     }
     .nav-bar-hamburger-menu .hamburger-menu{
         width: 500px;
         margin: auto;
-        background-color: antiquewhite;
     }
     .nav-bar-hamburger-menu .hamburger-menu li{
         width: 160px;
@@ -227,6 +227,7 @@ header{
         height: 20px;
         width: 20px;
         margin-top: 2px;
+        float: left;
     }   
     .nav-bar-hamburger-menu .hamburger-menu li span{
         font-size: 20px;
@@ -288,7 +289,6 @@ header{
     .nav-bar-hamburger-menu .hamburger-menu{
         width: 300px;
         margin: auto;
-        background-color: antiquewhite;
     }
     .nav-bar-hamburger-menu .hamburger-menu li{
         width: 160px;
@@ -306,12 +306,18 @@ header{
         height: 17px;
         width: 17px;
         margin-top: 2px;
-        margin-right: -15px;
+        margin-right: -8px;
+        margin-left: 20px;
+        float: left;
     }  
     .nav-bar-hamburger-menu .hamburger-menu li span{
         font-size: 17px;
     }
     .nav-bar{
+        display: none;
+    }
+    .nav-bar-hamburger-menu{
+        padding-bottom: 30px;
         display: none;
     }
 }
