--- a/Learnhall/CSS/learnhall-info.css
+++ b/Learnhall/CSS/learnhall-info.css
@@ -7,7 +7,7 @@
     width: 100%;  
     display: flex;
     justify-content: right;
-    position:absolute;    
+    position:absolute;
 }
 .background-img1{
     width: 100%;
@@ -43,6 +43,9 @@
 .learnhall-info-text button{
     background-color: #C04C40;
     border: #C04C40;
+}
+.circle-img{
+    display: none;
 }
 
 
@@ -165,59 +168,161 @@
 **********************/
 @media only screen and (min-width: 576px) and (max-width: 960px){
     .learnhall-info {
-        height:715px;
+        height: 722px;
     }
-    .model-container{
-        width: 675px;
-        height: 715px;
-    }
-    .brown-image{
-        margin-top: 62px;
-        width: 450px;
-        height: 487px;
-    }
-    .modelbackground-image{
-        margin-top: 132px;
-        right: 65px;
-        width: 460px;
-        height: 522px;
-    }
-    .model1-image{
-        margin-top: 105px;
-        right: 85px;
-        width: 419px;
-        height: 549px;
+    .learnhall-info-images{
+        position:absolute; 
+        display: flex;
+        justify-content: center;
     }
     .background-img1{
-        height:715px;
+        display: none;
+    }
+    .brown-image{
+        display: none;
+    }
+    .modelbackground-image{
+        position:relative;
+        height: 330px;
+        width:300px;
+        margin-top: 300px;
+    }
+    .model1-image{
+        position:absolute;
+        width: 280px;
+        margin-top: -350px;
+        margin-left: 12px;
     }
     .learnhall-info-text{
-        margin-top: 181px;
-    }
-    .learnhall-info-text .text{
-        width: 420px;
-        height: 459px;
+        margin-top: 41px;
+        height: 722px;
+        position:relative;
+        text-align: center;
     }
     .learnhall-info-text .heading{
-        font-size: 60px;
+        font-size: 50px;
         font-weight: 600;
-        width: 447px;
+        width: 100%;
+        text-align: center;
     }
     .learnhall-info-text .sub-text{
-        font-size: 26px;
-        width: 447px;
-        
+        font-size: 22px;
+        margin-top: 4px;
+        display: flex;
+        justify-content: center;
     }
     .learnhall-info-text p{
-        font-size: 19px;
-        margin-top: 48px;
+        font-size: 18px;
+        margin-top: 26px;
+        text-align: center;
     }
     .learnhall-info-text button{
-        font-size: 18px;
+        font-size: 16px;
         margin-top: 68px;
-        width: 188px;
-        height: 48px;
+        width: 168px;
+        height: 40px;
+        margin-top: 480px;
+    }
+    .circle-img{
+        width: 100%;
+        display: flex;
+        position: absolute;
+        height: 722px ;
+    }
+    .orange-img1{
+        position: relative;
+        width: 160px;
+        height: 160px;
+        left: -110px;
+        top: -40px;
+    }
+    .orange-img2{
+        position: absolute;
+        width: 90px;
+        height: 160px;
+        right: 0;
+        margin-top: 550px;
     }
 }
 
-@media only screen and (max-width: 576px){}
+/**********************
+******* Mobile ********
+**********************/
+@media only screen and (max-width: 576px){
+    .learnhall-info {
+        height: 722px;
+    }
+    .learnhall-info-images{
+        position:absolute; 
+        display: flex;
+        justify-content: center;
+    }
+    .background-img1{
+        display: none;
+    }
+    .brown-image{
+        display: none;
+    }
+    .modelbackground-image{
+        position:relative;
+        height: 215px;
+        width:195px;
+        margin-top: 240px;
+    }
+    .model1-image{
+        position:absolute;
+        width: 180px;
+        margin-top: -225px;
+        margin-left: 8px;
+    }
+    .learnhall-info-text{
+        margin-top: 31px;
+        height: 722px;
+        position:relative;
+        text-align: center;
+    }
+    .learnhall-info-text .heading{
+        font-size: 26px;
+        font-weight: 600;
+        width: 100%;
+        text-align: center;
+    }
+    .learnhall-info-text .sub-text{
+        font-size: 16px;
+        margin-top: 4px;
+        display: flex;
+        justify-content: center;
+    }
+    .learnhall-info-text p{
+        font-size: 14px;
+        margin-top: 26px;
+        text-align: center;
+    }
+    .learnhall-info-text button{
+        font-size: 14px;
+        margin-top: 68px;
+        width: 158px;
+        height: 30px;
+        margin-top: 320px;
+    }
+    .circle-img{
+        width: 100%;
+        display: flex;
+        position: absolute;
+        height: 722px ;
+    }
+    .orange-img1{
+        position: relative;
+        width: 80px;
+        height: 80px;
+        left: -55px;
+        top: -25px;
+    }
+    .orange-img2{
+        position: absolute;
+        width: 43px;
+        height: 90px;
+        right: 0;
+        margin-top: 470px;
+    }
+}
