--- a/Learnhall/CSS/learnhall-info.css
+++ b/Learnhall/CSS/learnhall-info.css
@@ -47,6 +47,25 @@
 .circle-img{
     display: none;
 }
+.brown-circle{
+    display: none;
+}
+.blue-circle{
+    display: none;
+}
+.orange-circle{
+    display: none;
+}
+.brown-circle-1{
+    display: none;
+}
+.blue-circle-1{
+    display: none;
+}
+.orange-circle-1{
+    display: none;
+}
+
 
 
 /**********************
@@ -185,7 +204,7 @@
         position:relative;
         height: 330px;
         width:300px;
-        margin-top: 300px;
+        margin-top: 285px;
     }
     .model1-image{
         position:absolute;
@@ -221,7 +240,7 @@
         margin-top: 68px;
         width: 168px;
         height: 40px;
-        margin-top: 480px;
+        margin-top: 465px;
     }
     .circle-img{
         width: 100%;
@@ -242,6 +261,54 @@
         height: 160px;
         right: 0;
         margin-top: 550px;
+    }
+    .brown-circle{
+        display: flex;
+        width: 18px;
+        height: 18px;
+        margin-top: 250px;
+        margin-right: 350px;
+        position: absolute;
+    }
+    .blue-circle{
+        display: flex;
+        width: 18px;
+        height: 18px;
+        margin-top: 255px;
+        margin-right: 290px;
+        position: absolute;
+    }
+    .orange-circle{
+        display: flex;
+        width: 18px;
+        height: 18px;
+        margin-top: 280px;
+        margin-right: 340px;
+        position: absolute;
+    }
+    .brown-circle-1{
+        display: flex;
+        width: 18px;
+        height: 18px;
+        margin-top: 630px;
+        margin-left: 350px;
+        position: absolute;
+    }
+    .blue-circle-1{
+        display: flex;
+        width: 18px;
+        height: 18px;
+        margin-top: 625px;
+        margin-left: 290px;
+        position: absolute;
+    }
+    .orange-circle-1{
+        display: flex;
+        width: 18px;
+        height: 18px;
+        margin-top: 600px;
+        margin-left: 340px;
+        position: absolute;
     }
 }
 
@@ -267,7 +334,7 @@
         position:relative;
         height: 215px;
         width:195px;
-        margin-top: 240px;
+        margin-top: 200px;
     }
     .model1-image{
         position:absolute;
@@ -303,7 +370,7 @@
         margin-top: 68px;
         width: 158px;
         height: 30px;
-        margin-top: 320px;
+        margin-top: 300px;
     }
     .circle-img{
         width: 100%;
@@ -324,5 +391,53 @@
         height: 90px;
         right: 0;
         margin-top: 470px;
+    }
+    .brown-circle{
+        display: flex;
+        width: 14px;
+        height: 14px;
+        margin-top: 177px;
+        margin-right: 228px;
+        position: absolute;
+    }
+    .blue-circle{
+        display: flex;
+        width: 14px;
+        height: 14px;
+        margin-top: 180px;
+        margin-right: 185px;
+        position: absolute;
+    }
+    .orange-circle{
+        display: flex;
+        width: 14px;
+        height: 14px;
+        margin-top: 200px;
+        margin-right: 220px;
+        position: absolute;
+    }
+    .brown-circle-1{
+        display: flex;
+        width: 14px;
+        height: 14px;
+        margin-top: 423px;
+        margin-left: 227px;
+        position: absolute;
+    }
+    .blue-circle-1{
+        display: flex;
+        width: 14px;
+        height: 14px;
+        margin-top: 420px;
+        margin-left: 180px;
+        position: absolute;
+    }
+    .orange-circle-1{
+        display: flex;
+        width: 14px;
+        height: 14px;
+        margin-top: 402px;
+        margin-left: 220px;
+        position: absolute;
     }
 }
