--- a/Learnhall/CSS/Choose-us.css
+++ b/Learnhall/CSS/Choose-us.css
@@ -110,7 +110,7 @@
         height: 304px;
         margin-right: 11px;
         margin-left: 11px;
-        margin-bottom: 5px;
+        margin-bottom: 20px;
     }
     .widget-box .background-img{
         width: 76px;
@@ -145,7 +145,7 @@
 **********************/
 @media only screen and (min-width: 576px) and (max-width: 960px){
     .choose-us-info{
-        padding-bottom: 90px;
+        padding-bottom: 50px;
     }
     .choose-us-info .text h2{
         font-size: 40px;
@@ -166,7 +166,7 @@
         height: 284px;
         margin-right: 13px;
         margin-left: 13px;
-        margin-bottom: 5px;
+        margin-bottom: 18px;
     }
     .widget-box .background-img{
         width: 66px;
@@ -201,12 +201,12 @@
 **********************/
 @media only screen and (max-width: 576px){
     .choose-us-info{
-        padding-bottom: 60px;
+        padding-bottom: 40px;
     }
     .choose-us-info .text h2{
         font-size: 23px;
         font-weight: 600;
-        margin-top: 45px;
+        margin-top: 39px;
     }
     .choose-us-info .text p{
         font-size: 15px;
@@ -218,35 +218,36 @@
         margin: auto;
     }
     .widget-box{
-        width: 125px;
-        height: 194px;
-        margin-right: 7px;
-        margin-left: 7px;
-        margin-bottom: 5px;
+        width: 120px;
+        height: max-content;
+        margin-right: 6px;
+        margin-left: 6px;
+        margin-bottom: 10px;
     }
     .widget-box .background-img{
         width: 46px;
         height: 46px;
         position: relative;
-        margin-top:20px ;
+        margin-top:15px ;
     }
     .widget-box .logo-img{
         position: absolute;
-        margin-top: 34px;
-        margin-left: -35px;
+        margin-top: 29px;
+        margin-left: -34px;
         width: 22px;
         height: 22px;
     }
     .widget-box h4 {
-        font-size: 12px;
+        font-size: 10px;
         color: #070A13;
-        margin-top: 16px;
-        margin-bottom: 12px;
+        margin-top: 12px;
+        margin-bottom: 8px;
     }
     .widget-box p {
         font-size: 11px;
         color: #070a13a2;
-        width: 90px;
+        width: 92px;
         margin: auto;
+        margin-bottom: 12px;
     }
 }
